Small palette wrapper margin on tablet fix

--- a/styles/palette.module.css
+++ b/styles/palette.module.css
@@ -101,6 +101,12 @@
   }
 }
 
+@media (max-width: 1150px) {
+  .wrapper {
+    margin-bottom: var(--space-m);
+  }
+}
+
 @media (min-width: 1150px) {
   .wrapper {
     margin: var(--space-xs) auto var(--space-m) auto;
